[gd_scene load_steps=9 format=3 uid="uid://dwvl1y3s8utlm"]

[ext_resource type="Script" uid="uid://bh0l311ollawq" path="res://scripts/game.gd" id="1_p57ef"]
[ext_resource type="PackedScene" uid="uid://c42uytphj4eoi" path="res://scenes/world_root.tscn" id="2_gee14"]
[ext_resource type="PackedScene" uid="uid://hjkaf8qce5gp" path="res://scenes/player.tscn" id="2_u5sy4"]
[ext_resource type="PackedScene" uid="uid://cq5svdh3caf26" path="res://scenes/enemy.tscn" id="3_gee14"]
[ext_resource type="PackedScene" uid="uid://bct11826q3a3f" path="res://scenes/insect.tscn" id="4_0tnpc"]
[ext_resource type="PackedScene" uid="uid://o4xq0q8ciqh" path="res://scenes/ui.tscn" id="5_vtaks"]
[ext_resource type="PackedScene" uid="uid://blkk67p7xt3hk" path="res://scenes/merchant.tscn" id="6_gee14"]
[ext_resource type="Script" uid="uid://lwrr074pyufe" path="res://scripts/saver_loader/saver_loader.gd" id="6_kvpfn"]

[node name="Game" type="Node2D"]
script = ExtResource("1_p57ef")

[node name="WorldRoot" parent="." instance=ExtResource("2_gee14")]
unique_name_in_owner = true

[node name="Player" parent="WorldRoot" instance=ExtResource("2_u5sy4")]
unique_name_in_owner = true
position = Vector2(560, 251)

[node name="Enemy" parent="WorldRoot" instance=ExtResource("3_gee14")]
position = Vector2(101, 79)

[node name="Insect" parent="WorldRoot" instance=ExtResource("4_0tnpc")]
position = Vector2(716, 816)

[node name="Insect2" parent="WorldRoot" instance=ExtResource("4_0tnpc")]
position = Vector2(1458, 714)

[node name="Insect3" parent="WorldRoot" instance=ExtResource("4_0tnpc")]
position = Vector2(1509, 225)

[node name="Merchant" parent="WorldRoot" instance=ExtResource("6_gee14")]
unique_name_in_owner = true
position = Vector2(1044, 1021)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("5_vtaks")]

[node name="SaveLoadPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -470.0
offset_top = 15.0
offset_right = -296.0
offset_bottom = 137.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SaveLoadPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 30.0
offset_right = 159.0
offset_bottom = 105.0

[node name="SaveButton" type="Button" parent="CanvasLayer/SaveLoadPanel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer/SaveLoadPanel/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Utilities" type="Node" parent="."]

[node name="SaverLoader" type="Node" parent="Utilities"]
unique_name_in_owner = true
script = ExtResource("6_kvpfn")
metadata/_custom_type_script = "uid://lwrr074pyufe"

[connection signal="pressed" from="CanvasLayer/SaveLoadPanel/VBoxContainer/SaveButton" to="Utilities/SaverLoader" method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SaveLoadPanel/VBoxContainer/LoadButton" to="Utilities/SaverLoader" method="_on_load_button_pressed"]
